[1.6.6] Fix bug with chunked data not being processed.
Signed-off-by: Jacob Glickman <jhg023@bucknell.edu>